Bug 502239 - Unlocking a vault always opens a Dolphin window instead of a tab
Summary: Unlocking a vault always opens a Dolphin window instead of a tab
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Vaults widget (other bugs)
Version First Reported In: 6.3.3
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-31 13:04 UTC by Damglador
Modified: 2025-04-18 19:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Damglador 2025-03-31 13:04:10 UTC
SUMMARY
When unlocking a vault, it opens it in file explorer, but it ignores preference in Dolphin to open everything in tabs instead of windows and opens a new Dolphin window

STEPS TO REPRODUCE
1. Set in Dolphin settings Interface > Folders & Tabs > Keep a single Dolphin window, opening new folders in tabs
2. Apply
3. Open Dolphin
4. While Dolphin is opened, unlock a vault

OBSERVED RESULT
Opens a new Dolphin window

EXPECTED RESULT
Open a new tab in existing Dolphin window

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3
Kernel Version: 6.14.0-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor 1: AMD Radeon Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3060 Laptop GPU

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-03-31 20:31:07 UTC
Can confirm. Not sure if this is Plasma Vault's fault, or Dolphin's. Needs investigation.
Comment 2 Damglador 2025-04-03 14:48:29 UTC
Opening a folder on desktop also have similar behavior. It opens a new Dolphin window instead of a tab, but if there is a tab for the folder already in a Dolphin window, it just points to that tab. I don't think I can reproduce that with the vault widget, because it opens the folder only after I unlock it and unlocking it second time will just give an error.

I don't know if these two bugs related.
Comment 3 Damglador 2025-04-03 14:50:54 UTC
If I open the folder where vault I choose vault to be before I unlock it, it still opens a new window
Comment 4 Nate Graham 2025-04-11 22:32:03 UTC
It looks like this is actually intentional; see https://invent.kde.org/plasma/plasma-vault/-/blob/master/kded/service.cpp?ref_type=heads#L361 and Bug 445542.

We could perhaps narrow the condition here so that it only forces a new window if there are multiple activities and the vault being opened is activity-specific.
Comment 5 Nate Graham 2025-04-11 22:54:15 UTC Comment hidden (spam)
Comment 7 Damglador 2025-04-12 14:32:00 UTC
Thanks, Nate
Comment 8 Nate Graham 2025-04-18 19:17:56 UTC
That merge request was merged, so this will be fixed in Plasma 6.4.0.